// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PubShareBox when rendering when the theme has not been purchased renders correctly 1`] = `
<styled.div
  isChanged={false}
>
  <PreviewAction
    price={100}
    variationId="234"
  />
</styled.div>
`;

exports[`PubShareBox when rendering when this is a purchased theme when this is not the active theme renders correctly 1`] = `
<styled.div
  isChanged={false}
>
  <InactiveAction
    handlePublish={[Function]}
    handleSave={[Function]}
    isPrelaunchStore={false}
    loading={false}
  />
</styled.div>
`;

exports[`PubShareBox when rendering when this is a purchased theme when this is the active theme when this is a prelaunch store renders correctly 1`] = `
<styled.div
  isChanged={false}
>
  <ActiveAction
    handlePublish={[Function]}
    handleSave={[Function]}
    isPrelaunchStore={true}
    loading={false}
  />
</styled.div>
`;

exports[`PubShareBox when rendering when this is a purchased theme when this is the active theme when this is not a prelaunch store renders correctly 1`] = `
<styled.div
  isChanged={false}
>
  <ActiveAction
    handlePublish={[Function]}
    handleSave={[Function]}
    isPrelaunchStore={false}
    loading={false}
  />
</styled.div>
`;
